<resources>
    <string name="app_name">Amity</string>
    <string name="textView_Titulo">Título de la nota</string>
    <string name="textView_Lista">Lista de Notas</string>
    <string name="listView_Lista">Lista de Notas</string>
    <string name="editText_Titulo">Título</string>
    <string name="buttonAgregar">Agregar Nota</string>
    <string name="add_Nota">Añadir/Editar nota</string>
    <string name="ver_nota">Visualización de la nota</string>
    <string name="menu_crear">Crear Nota</string>
    <string name="menu_editar">Editar Nota</string>
    <string name="menu_eliminar">Eliminar Nota</string>
    <string name="menu_settings">Ajustes</string>
    <string name="menu_ordenar">Ordenar</string>
    <string name="menu_salir">Salir</string>
    <string name="menu_cerrar">Cerrar cuenta</string>
    <string name="menu_borrar">Borrar todos</string>
    <string name="action_settings">Ajustes</string>
    <string name="fab">fab</string>
    <string name="welcome"> <u>Bienvenido</u> </string>
    <string name="username">Correo</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Entrar</string>
    <string name="ToRegister">¿No tienes Cuenta? Registrate</string>
    <string name="register"><u>Registrate</u></string>
    <string name="passwordSecure">Repite Contraseña</string>
    <string name="create">Crear</string>
    <string name="TermsOfUse">Acepto los términos de uso</string>
    <string name="buttonNote">Boton flotante para añadir notas</string>
    <string name="NoteListU"><u>Lista de Notas</u> </string>
    <string name="noteTitle">Título de la nota</string>
    <string name="noteContent">Contenido de la nota</string>
    <string name="tamaño"><u>Tamaño:</u></string>
    <string name="letra"><u>Letra:</u></string>
    <string name="estilo"><u>Estilo:</u></string>
    <string name="idioma"><u>Idioma:</u></string>
    <string name="buttonAplicar">Aplicar</string>
    <string name="textTitulo">Título</string>
    <string name="textContennido">Contenido</string>
    <string name="errorUsuario">Introduzca un usuario</string>
    <string name="errorCorreo">Introduzca un correo</string>
    <string name="errorPassw">Introduzca una contraseña</string>
    <string name="errorUsuarioPassw">Rellene los espacios</string>
    <string name="errorLogin">Autenticación fallida</string>
    <string name="errorTerms">Acepte los términos de uso</string>
    <string name="errorPasswSecure">Repita la contraseña</string>
    <string name="errorSamePassw">Las contraseñas no coinciden</string>
    <string name="errorRegister">Registro fallido</string>
    <string name="errorEmail">Correo no válido</string>
    <string name="errorUsoEmail">Correo ya existente</string>
    <string name="errorDebil">Contraseña débil</string>
    <string name="errorCorreoUnknown">Correo no registrado</string>
    <string name="errorCredencialesInv">Credenciales inválidas</string>
    <string name="checkRecordarme">Recordarme</string>
    <string name="olvidarPassw">¿Has olvidado la contraseña?</string>
    <string name="resetPassw">¿Cambiar Contraseña?</string>
    <string name="resetPasswtext">Introduce tu email</string>
    <string name="enviar">ENVIAR</string>
    <string name="msjEmailT">Revisa tu correo</string>
    <string name="msjEmailF">No existe el correo</string>
    <string name="VerificacionEmail">Se ha enviado un email de verificiación</string>
    <string name="VerificacionEmailFailed">No has verificado el email</string>
    <string name="update_note_b">Actualitzar Nota</string>
    <string name="afegir_note_b">Añadir Nota</string>
    <string name="afegir_titol">Añada un titulo a la nota</string>
    <string name="afegir_contingut">Añada contenido a la nota</string>
    <string name="updated_note">Nota actualizada</string>
    <string name="afegida_note">Nota añadida</string>
    <string name="no_afegida_note">Error, vuelvalo a intentar</string>
    <string name="errorPasswPequeña">La contraseña ha de tener más de 7 carácteres</string>
    <string name="msgConfirmació">Mensaje de confirmación</string>
    <string name="msgDeleteNote">¿Quiere eliminar la nota?</string>
    <string name="msgBorrar">Borrar nota</string>
    <string name="msgCancelar">Cancelar</string>
    <string name="General">General</string>
    <string name="Notas">Notas</string>
    <string name="Imagenes">Imagenes</string>
    <string name="Logout">Cerrar sesión</string>
    <string name="Eslogan">Suelta tu imaginación</string>
    <string name="NombreImagen">Título imagen</string>
    <string name="Upload">Guardar</string>
    <string name="ImageSuccess">Imagen guardada</string>
    <string name="afegir_titolIMG">Añada un título a la imagen</string>
    <string name="afegir_contingutIMG">Añada una imagen</string>
    <string name="delete">Borrar</string>
    <string name="edit">Editar</string>

    <string-array name="letra">
        <item>Negrita</item>
        <item>Negrita-Normal</item>
        <item>Normal</item>
        <item>Fino</item>
    </string-array>
    <string-array name="estilo">
        <item>Día</item>
        <item>Noche</item>
    </string-array>
    <string-array name="idioma">
        <item>Castellano</item>
        <item>Inglés</item>
        <item>Catalán</item>
    </string-array>
</resources>