<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B0045BB8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#00FAFAFA"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="#FDD5DEFA"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextUsernameRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/editTextPasswordRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/editTextPasswordRegisterSecure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/passwordSecure"
            android:inputType="textPassword"
            android:textSize="22sp"/>

        <CheckBox
            android:id="@+id/termsOfUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/TermsOfUse"/>

        <Button
            android:id="@+id/buttonCrear"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/md_white_1000"
            android:gravity="bottom|clip_horizontal|center|center_horizontal|center_vertical|fill_vertical"
            android:hapticFeedbackEnabled="false"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="#D3000000"
            android:textSize="15sp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>