<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundCardColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/noteTitle"
            android:autoSizeTextType="uniform"
            android:textColor="?attr/primaryTextColor"/>

        <TextView
            android:id="@+id/textView_Titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="clip_horizontal|center"
            android:text="@string/textTitulo"
            android:autoSizeTextType="uniform"
            android:textColor="?attr/primaryTextColor"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/textContenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/noteContent"
            android:autoSizeTextType="uniform"
            android:textColor="?attr/primaryTextColor"/>

        <TextView
            android:id="@+id/textView_Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:autoSizeTextType="uniform"
            android:gravity="center_horizontal"
            android:text="@string/textContennido"
            android:textColor="?attr/primaryTextColor" />
    </LinearLayout>
</RelativeLayout>