<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B0045BB8"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginBottom="20dp"
            android:background="#00FAFAFA"
            android:text="@string/welcome"
            android:textAllCaps="false"
            android:textColor="#FDD5DEFA"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextUsernameLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editTextPasswordLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginBottom="20dp"
            android:background="#FFFFFF"
            android:gravity="bottom|clip_horizontal|center|center_horizontal|center_vertical|fill_vertical"
            android:hapticFeedbackEnabled="false"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#D3000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|fill_vertical"
            android:onClick="onClick"
            android:text="@string/ToRegister"
            android:textColor="#D77EDAF1"
            android:textSize="18sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>