<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/backgroundCardColor">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:text="@string/noteTitle"
        android:textColor="?attr/primaryTextColor"
        android:textSize="@dimen/text"
        app:autoSizeTextType="uniform"
        />

    <EditText
        android:id="@+id/editText_Titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerInParent="true"
        android:autofillHints=""
        android:ems="10"
        android:importantForAutofill="yes"
        android:inputType="textPersonName"
        android:textColor="?attr/primaryTextColor"
        android:textSize="@dimen/text"
        app:autoSizeTextType="uniform"/>

    <TextView
        android:id="@+id/textView_Contenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_Titulo"
        android:layout_centerInParent="true"
        android:text="@string/noteContent"
        android:textColor="?attr/primaryTextColor"
        android:textSize="@dimen/text"
        app:autoSizeTextType="uniform"/>

    <EditText
        android:id="@+id/editText_Contenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_Contenido"
        android:layout_centerInParent="true"
        android:autofillHints=""
        android:ems="10"
        android:importantForAutofill="yes"
        android:inputType="textMultiLine"
        android:textColor="?attr/primaryTextColor"
        android:textSize="@dimen/text"
        app:autoSizeTextType="uniform"/>

    <Button
        android:id="@+id/button_Agregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_Contenido"
        android:layout_centerHorizontal="true"
        android:text="@string/buttonAgregar"
        android:textAllCaps="false"
        android:textSize="@dimen/button"
        app:backgroundTint="@color/md_black_1000"
        android:textColor="@color/md_white_1000"
        app:autoSizeTextType="uniform"/>

</RelativeLayout>