<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/backgroundCardColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center|clip_vertical|start|center_horizontal|fill_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">

        <TextView
            android:id="@+id/textView_Ajustes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|fill|fill_horizontal|center_vertical|fill_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tamaño"
            android:textColor="?attr/primaryTextColor"
            android:textSize="@dimen/text"
            app:autoSizeTextType="uniform"/>

        <Spinner
            android:id="@+id/tamaño"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|fill|fill_horizontal|center_vertical|fill_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@android:drawable/btn_dropdown"
            android:gravity="center|fill"
            android:spinnerMode="dropdown"
            android:textColor="?attr/primaryTextColor"
            android:entries="@array/tamaño"
            app:autoSizeTextType="uniform"/>

        <TextView
            android:id="@+id/textView_Letra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|fill|fill_horizontal|fill_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/letra"
            android:textColor="?attr/primaryTextColor"
            android:textSize="@dimen/text"
            app:autoSizeTextType="uniform"/>

        <Spinner
            android:id="@+id/letra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|fill|fill_horizontal|center_vertical|fill_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@android:drawable/btn_dropdown"
            android:gravity="center|fill|fill_vertical"
            android:spinnerMode="dropdown"
            android:textColor="?attr/primaryTextColor"
            android:entries="@array/letra"
            app:autoSizeTextType="uniform"/>

        <TextView
            android:id="@+id/textView_Estilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|fill|fill_horizontal|center_vertical|fill_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/estilo"
            android:textColor="?attr/primaryTextColor"
            android:textSize="@dimen/text"
            app:autoSizeTextType="uniform"/>

        <Spinner
            android:id="@+id/estilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|fill|fill_horizontal|center_vertical|fill_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@android:drawable/btn_dropdown"
            android:gravity="center|fill|fill_vertical"
            android:spinnerMode="dropdown"
            android:textColor="?attr/primaryTextColor"
            android:entries="@array/estilo"
            app:autoSizeTextType="uniform"/>

        <TextView
            android:id="@+id/textView_Idioma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|fill|fill_horizontal|center_vertical|fill_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/idioma"
            android:textColor="?attr/primaryTextColor"
            android:textSize="@dimen/text"
            app:autoSizeTextType="uniform"/>

        <Spinner
            android:id="@+id/idioma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center|center_horizontal|fill|fill_horizontal|center_vertical|fill_vertical|end"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@android:drawable/btn_dropdown"
            android:gravity="center|fill|fill_vertical"
            android:spinnerMode="dropdown"
            android:textColor="?attr/primaryTextColor"
            android:entries="@array/idioma"
            app:autoSizeTextType="uniform"/>

        <Button
            android:id="@+id/buttonAplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|fill|fill_horizontal|center_vertical|fill_vertical|end"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:gravity="clip_horizontal|center|fill_vertical"
            android:hapticFeedbackEnabled="false"
            android:text="@string/buttonAplicar"
            android:textAllCaps="false"
            android:textColor="?attr/secondaryTextColor"
            android:textSize="@dimen/button"
            app:backgroundTint="?attr/primaryTextColor"
            app:autoSizeTextType="uniform"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>